[gd_scene load_steps=51 format=3 uid="uid://di6s13y1dj207"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_ntgir"]
[ext_resource type="Resource" uid="uid://i0e0khprf2f7" path="res://ResourseData/DefaultMovementData.tres" id="2_nclsf"]
[ext_resource type="Texture2D" uid="uid://bgrakcsdailgh" path="res://Graphics/player/death.png" id="3_6kits"]
[ext_resource type="Texture2D" uid="uid://b6ro22g8s4uv8" path="res://Graphics/player/attack.png" id="3_28w4j"]
[ext_resource type="Texture2D" uid="uid://bfxuqn43q51yv" path="res://Graphics/player/idle.png" id="3_octkk"]
[ext_resource type="Texture2D" uid="uid://cs3pag8n5kev1" path="res://Graphics/player/hit.png" id="4_rodn4"]
[ext_resource type="Texture2D" uid="uid://pjs8p7k30fw3" path="res://Graphics/player/jump.png" id="4_yoqlu"]
[ext_resource type="Texture2D" uid="uid://kie2ve8lpl7o" path="res://Graphics/player/run.png" id="5_7ec6a"]
[ext_resource type="AudioStream" uid="uid://dijngsu4l8rtb" path="res://Sounds/30_Jump_03.wav" id="9_3owql"]
[ext_resource type="AudioStream" uid="uid://bbjiwx5g14oj2" path="res://Sounds/punch_two.wav" id="9_6pxho"]
[ext_resource type="AudioStream" uid="uid://dd3latbrk8qhs" path="res://Sounds/Concrete 1.wav" id="11_qvdgi"]
[ext_resource type="AudioStream" uid="uid://wtma5ryxer3" path="res://Sounds/52_Dive_02.wav" id="12_xvl71"]
[ext_resource type="AudioStream" uid="uid://dqf7qo7fgcs8i" path="res://Sounds/61_Hit_03.wav" id="13_vkb08"]
[ext_resource type="AudioStream" uid="uid://bjlpoud02f27" path="res://Sounds/547042__eponn__hit-impact-sword-3.wav" id="14_fklu2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ia8lq"]
size = Vector2(9.77778, 12.8889)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8cp2"]
size = Vector2(13.3333, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_csi4l"]
atlas = ExtResource("3_28w4j")
region = Rect2(0, 0, 126, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngr2q"]
atlas = ExtResource("3_28w4j")
region = Rect2(0, 39, 126, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_11ple"]
atlas = ExtResource("3_28w4j")
region = Rect2(0, 78, 126, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qlbp"]
atlas = ExtResource("3_28w4j")
region = Rect2(0, 117, 126, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_m02c2"]
atlas = ExtResource("3_28w4j")
region = Rect2(0, 156, 126, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm046"]
atlas = ExtResource("3_28w4j")
region = Rect2(0, 195, 126, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_tha5o"]
atlas = ExtResource("3_28w4j")
region = Rect2(0, 234, 126, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h6gn"]
atlas = ExtResource("3_28w4j")
region = Rect2(0, 273, 126, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nked"]
atlas = ExtResource("3_6kits")
region = Rect2(0, 0, 40, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxwvu"]
atlas = ExtResource("3_6kits")
region = Rect2(0, 39, 40, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_aow3h"]
atlas = ExtResource("3_6kits")
region = Rect2(0, 78, 40, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_k076n"]
atlas = ExtResource("3_6kits")
region = Rect2(0, 117, 40, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2uww"]
atlas = ExtResource("3_6kits")
region = Rect2(0, 156, 40, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc08w"]
atlas = ExtResource("4_rodn4")
region = Rect2(0, 39, 126, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3jmf"]
atlas = ExtResource("4_rodn4")
region = Rect2(0, 0, 126, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcikb"]
atlas = ExtResource("3_octkk")
region = Rect2(0, 0, 40, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_mak8w"]
atlas = ExtResource("3_octkk")
region = Rect2(0, 39, 40, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_w15br"]
atlas = ExtResource("3_octkk")
region = Rect2(0, 78, 40, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_hilla"]
atlas = ExtResource("3_octkk")
region = Rect2(0, 117, 40, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8oyg"]
atlas = ExtResource("3_octkk")
region = Rect2(0, 156, 40, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdrn8"]
atlas = ExtResource("4_yoqlu")
region = Rect2(0, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8yhx"]
atlas = ExtResource("4_yoqlu")
region = Rect2(0, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_s672d"]
atlas = ExtResource("4_yoqlu")
region = Rect2(0, 100, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge3pi"]
atlas = ExtResource("4_yoqlu")
region = Rect2(0, 150, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7qpl"]
atlas = ExtResource("5_7ec6a")
region = Rect2(0, 0, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf3xe"]
atlas = ExtResource("5_7ec6a")
region = Rect2(0, 39, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3wud"]
atlas = ExtResource("5_7ec6a")
region = Rect2(0, 78, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk4d3"]
atlas = ExtResource("5_7ec6a")
region = Rect2(0, 117, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ui6"]
atlas = ExtResource("5_7ec6a")
region = Rect2(0, 156, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3r8k"]
atlas = ExtResource("5_7ec6a")
region = Rect2(0, 195, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0rgm"]
atlas = ExtResource("5_7ec6a")
region = Rect2(0, 234, 42, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yfy6"]
atlas = ExtResource("5_7ec6a")
region = Rect2(0, 273, 42, 39)

[sub_resource type="SpriteFrames" id="SpriteFrames_e25nt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_csi4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngr2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11ple")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qlbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m02c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm046")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tha5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h6gn")
}],
"loop": false,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nked")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxwvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aow3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k076n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2uww")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc08w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3jmf")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcikb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mak8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w15br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hilla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8oyg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdrn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8yhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s672d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge3pi")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7qpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf3xe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3wud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk4d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ui6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3r8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0rgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yfy6")
}],
"loop": true,
"name": &"run",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvv3o"]
size = Vector2(67, 29)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 2
floor_constant_speed = true
floor_snap_length = 3.0
safe_margin = 0.1
script = ExtResource("1_ntgir")
movement_data = ExtResource("2_nclsf")

[node name="HazardDetector" type="Area2D" parent="."]
scale = Vector2(1.5, 1.5)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardDetector"]
position = Vector2(1.33333, 2.33333)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_ia8lq")
debug_color = Color(0.929412, 0, 0.666667, 0.85098)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3.49997)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_f8cp2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_e25nt")
animation = &"idle"

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -52)
zoom = Vector2(1.2, 1.2)
position_smoothing_enabled = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackCollisionShape" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(48.5, 3.5)
shape = SubResource("RectangleShape2D_kvv3o")
disabled = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_3owql")
bus = &"SFX"

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(22, -1)
stream = ExtResource("9_6pxho")
volume_db = -10.0
bus = &"SFX"

[node name="WalkAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 17)
stream = ExtResource("11_qvdgi")
volume_db = -20.0
bus = &"SFX"

[node name="DashAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_xvl71")
bus = &"SFX"

[node name="SoundTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.55
one_shot = true

[node name="DamagedAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_vkb08")
volume_db = 10.0

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_fklu2")

[connection signal="area_entered" from="HazardDetector" to="." method="_on_hazard_detector_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
